services/airflow/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: airflow
spec:
  selector:
    matchLabels:
      component: scheduler
  template:
    metadata:
      labels:
        component: scheduler
    spec:
      containers:
      - name: scheduler
        image: apache/airflow:2.9.3
        command: ["airflow"]
        args: ["scheduler"]
