services/airflow/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: airflow
spec:
  selector:
    matchLabels:
      component: webserver
  template:
    metadata:
      labels:
        component: webserver
    spec:
      containers:
      - name: webserver
        image: apache/airflow:2.9.3
        command: ["airflow"]
        args: ["webserver"]
        ports:
        - containerPort: 8080
